# uvnvpie

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.de.md  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
run/: setup_env.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  settings.rs  uv.rs
src/components/: AboutDialog.tsx  ActionsPanel.tsx  ConsolePanel.tsx  DependencyTreePanel.tsx  DetailsPanel.tsx  EnvironmentsList.tsx  HeaderPanel.tsx  InterpreterCard.tsx  PackagesTable.tsx  ProjectExplorerTree.tsx  RequirementsPanel.tsx  SecurityPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  Tabs.tsx  Titlebar.tsx  TreeView.tsx  WorkspaceTabs.tsx
src/mock/: data.ts
src/state/: backend.ts  i18n.ts  security.ts  store.ts
src/styles/: app.css  tokens.css
src/types/: domain.ts
