[package]
name = "uvnvpy"
version = "0.1.0"
description = "uvnvpy"
authors = ["sinus"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
