[package]
name = "uvnvpie"
version = "0.1.0"
description = "uvnvpie"
authors = ["Youssef Serestou"]
license = "None"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
